--- a/README
+++ b/README
@@ -1,7 +1,8 @@
-Welcome to your Appcelerator Titanium Mobile Project
+This is an Appcelerator Titanium Mobile Project
 
-This is a blank project.  Start by editing your application's app.js to 
-make your first mobile project using Titanium.
+This project was created to allow anyone with a mobile phone to record a moment within a location and have that be available to anyone else running that application. The recording can only be accessed if you are running the application and then are within 100 feet of the recording site.
+
+- Hector Leiva
 
 
 
