--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-This is an Appcelerator Titanium Mobile Project
+Welcome to your Appcelerator Titanium Mobile Project
 
 This project was created to allow anyone with a mobile phone to record a moment within a location and have that be available to anyone else running that application. The recording can only be accessed if you are running the application and then are within 100 feet of the recording site.
 
